--- a/apis/ejercicio-2/src/views/index.ejs
+++ b/apis/ejercicio-2/src/views/index.ejs
@@ -7,4 +7,5 @@
       <li><a href="/movies/recommended">Recommended</a></li>
       <li><a href="/movies/news">News</a></li>
     </ul>
+    <div class="api"></div>
 <%- include("./footer")  %>
