--- a/apis/ejercicio-2/src/views/footer.ejs
+++ b/apis/ejercicio-2/src/views/footer.ejs
@@ -11,6 +11,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
 <link rel='stylesheet' href='/stylesheets/style.css' />
+<!-- <script type="text/javascript" src="rick-morty-api.js"></script> -->
 </body>
 
 </html>
